--- a/IdeaStudio.Website/wwwroot/scss/layout/_grid.scss
+++ b/IdeaStudio.Website/wwwroot/scss/layout/_grid.scss
@@ -16,7 +16,7 @@
   }
 }
 
-@container (max-width: 640px) {
+@media (max-width: 40rem) {
   .ds-grid--2,
   .ds-grid--3,
   .ds-grid--4 {
